--- a/style.css
+++ b/style.css
@@ -19,3 +19,20 @@ p {
     font-family: 'Courier New', Courier, monospace;
     color:midnightblue
 }
+
+
+p {
+    font-family: 'Courier New', Courier, monospace;
+    color:rgb(19, 11, 87);
+    font-size: medium;
+}
+
+
+
+/* 
+doctype, html, head, body, meta, title,
+h1, h2, h3, p, link, ul, ol, img, a, hr
+The following CSS properties:
+
+background, color, font-family, font-size,
+height, margin, padding, text-align */
